# modern_cpp

./: A.h  CMakeLists.txt  DerivedClass.h  MyType.h  PolymorphicClass2.h  Rule5Class.h  Wrapper.h  conanfile.txt  expected.h  format_specializations.h  main.cpp  optional.h  shared_ptr.h  span.h  tests.cpp  use_concepts.h  use_expected.h  use_optional.h  use_ranges.h  use_ranges_v3.h  use_shared.h  use_span.h  use_string_view.h
docker/: Dockerfile  build.sh  helpful_commands.txt  run.sh
